moved CSV to root for simplicity of the marker